refactor: update document management to streamline stored file handling
- Refactored document-related classes to replace direct stored file references with IDs, enhancing separation of concerns and reducing dependencies.
- Introduced new methods in DocumentApi and related services for batch retrieval of stored file metadata, improving efficiency in document processing.
- Updated mappers to utilize pre-loaded stored file metadata, ensuring consistent data representation across various document types.
- Enhanced email templates for password reset and invitation notifications to improve user experience with English translations.
- Removed deprecated methods and classes related to previous stored file handling, streamlining the codebase.