@@ -2,11 +2,11 @@ package com.example.interhubdev.document.internal.homework;
 
 import com.example.interhubdev.document.HomeworkDto;
 import com.example.interhubdev.document.StoredFileDto;
-import com.example.interhubdev.document.internal.storedFile.StoredFileMappers;
 
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * Entity to DTO mapping for homework. No instantiation.
@@ -16,12 +16,22 @@ final class HomeworkMappers {
     private HomeworkMappers() {
     }
 
-    static HomeworkDto toDto(Homework entity) {
+    /**
+     * Maps entity to DTO using pre-loaded stored file metadata.
+     *
+     * @param entity   homework entity
+     * @param filesMap map of storedFileId -> StoredFileDto (must contain all file ids from entity.getFiles())
+     */
+    static HomeworkDto toDto(Homework entity, Map<UUID, StoredFileDto> filesMap) {
         List<StoredFileDto> files = entity.getFiles().stream()
-            .map(HomeworkFile::getStoredFile)
-            .filter(Objects::nonNull)
-            .map(StoredFileMappers::toDto)
-            .toList();
+            .map(f -> {
+                StoredFileDto dto = filesMap.get(f.getStoredFileId());
+                if (dto == null) {
+                    throw new IllegalStateException("Stored file metadata missing for id: " + f.getStoredFileId());
+                }
+                return dto;
+            })
+            .collect(Collectors.toList());
         UUID lessonId = entity.getLessonHomework() != null
             ? entity.getLessonHomework().getLessonId()
             : null;
